--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Git Repo</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>I can push to github</h1>
     <h2>Mama i can code now</h2>
     <h3>New code changed</h3>
+    <h3>I am coding and coding</h3>
   </body>
 </html>
