--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <h2>Mama i can code now</h2>
     <h3>New code changed</h3>
     <h3>I am coding and coding</h3>
+    <p>
+      Amar sonar Bangla Ami Tomai Valo bashi crrodin ami tomar akahs tomar batsh amar prane bajai
+      bashi amar sonar bangla ami tomai valo bashi
+    </p>
   </body>
 </html>
