--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         Amar sonar Bangla Ami Tomai Valo bashi crrodin ami tomar akahs tomar batsh amar prane bajai
         bashi amar sonar bangla ami tomai valo bashi
       </p>
+      <img src="/baby.jpg" alt="" />
     </div>
   </body>
 </html>
