--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First Git Repo</title>
+    <title>My First Git Reposotry</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -18,6 +18,16 @@
         bashi amar sonar bangla ami tomai valo bashi
       </p>
       <img src="/baby.jpg" alt="" />
+      <div>
+        <h3>New Blog</h3>
+        <h5>Loog mama, Like as Blog</h5>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur odio architecto sequi
+          dolor repellat corrupti voluptatum saepe, maxime, deleniti ipsa dignissimos numquam sint.
+          Incidunt asperiores magni, doloribus iusto hic obcaecati repellendus facere sint, velit
+          consectetur facilis placeat a voluptatem totam.
+        </p>
+      </div>
     </div>
   </body>
 </html>
